<resources>
    <string name="app_name">Recipe Slayer</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="about_us">About Us</string>
    <string name="details">Details</string>
    <string name="logout">Logout</string>
    <string name="all">All</string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="logo_description">logo for our app, recipe slayer, a knight man holding knives and kitchen tools and wearing the chef hat.</string>
    <string name="don_t_have_account">Don’t have account?</string>
    <string name="create_now">Create now</string>
    <string name="whoarewe">Who are we?</string>
    <string name="elsayed_moawad">Elsayed Moawad</string>
    <string name="abdallah_habsa">Abdallah 7absa</string>
    <string name="yasmeen_mohammed">Yasmeen Mohammed</string>
    <string name="instructions">Instructions</string>
    <string name="more_details">Show instructions</string>
    <string name="less_details">Hide instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="loading">Loading</string>
    <string name="ideas">Ideas</string>
    <string name="enter_your_ingredients_demands_and_prompts">Message the Recipe Slayer</string>
    <string name="generating_a_response_for_your_prompt">Generating a response for your prompt…</string>
    <string name="ideas_unleash_your_creativity">Ideas, Unleash your creativity!</string>
    <string name="generate">Generate</string>
    <string name="profile">Profile</string>
    <string name="upload">Upload</string>
    <string name="extract_ingredients">Extract ingredients</string>
    <string name="recommended_recipes">Recommended Recipes</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="ingredient">ingredient</string>
    <string name="regional">Regional</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="light_mode">Light Mode</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="recipe_slayer_version">Recipe Slayer . Version 1.2.07</string>
    <string name="settings">Settings</string>
    <string name="no_recommendation_yet">No recommendations yet</string>
    <string name="area">Area</string>
    <string name="try_again"><u>try again</u></string>
    <string name="network_error">Network Error</string>
    <string name="check_your_internet_connection">Check your internet connection and try again!</string>
    <string name="full_screen">Full Screen</string>
    <string name="general">General</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="update_changes">Save Changes</string>
    <string name="verify_your_email">Verify Your Email</string>
    <string name="verification_email_sent">Verification email sent. Please check your email.</string>
    <string name="verify">Verify</string>
    <string name="missing_data">Missing data</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="please_enter_a_stronger_password">Please enter a stronger password</string>
    <string name="user_doesn_t_exist">User doesn\'t exist!</string>
    <string name="invalid_credentials">Invalid Credentials!</string>
    <string name="user_already_exists">User already exists!</string>
    <string name="recipe_unsaved">Recipe unsaved</string>
    <string name="recipe_saved">Recipe saved</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="account_creation_failed">Account creation failed</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="passwords_don_t_match">Passwords don\'t match!</string>
    <string name="unexpected_error_happens_please_try_again">Unexpected error happens! Please try again</string>
    <string name="a_user_with_the_provided_email_already_exists">A user with the provided email already exists!</string>
    <string name="profile_updated">Profile updated.</string>
    <string name="email_is_not_verified_yet">Email is not verified yet!</string>
    <string name="account_created_successfully">Account created successfully!</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password_changed">Password Changed!</string>
    <string name="search_here">Search here</string>
    <string name="this_feature_is_coming_soon">Coming SOON!</string>
    <string name="password_instructions">
    Password should be at least 8 characters including:\n
    \t&#8226; Uppercase and lowercase letters.\n
    \t&#8226; Numbers and symbols.
    </string>
    <string name="you_have_reached_the_limit">Sorry you have reached the limits! Try again later or try to:</string>
    <string name="start_new_chat"><u>Start a new chat</u></string>

</resources>