<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".ui.recipe.fragments.ChangePasswordFragment">

    <TextView
        android:id="@+id/cp_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@color/button_selected_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_pass_0_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColorHint="@color/auth_et_text_color_hint"
        app:boxBackgroundColor="#00ffffff"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@drawable/text_input_outline_color"
        app:cursorColor="@color/auth_et_main_color"
        app:hintTextColor="@color/auth_et_main_color"
        app:layout_constraintTop_toBottomOf="@+id/cp_tv"
        app:placeholderTextColor="@color/auth_et_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old_password"
            android:inputType="text"
            android:textColor="@color/auth_et_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_pass_1_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColorHint="@color/auth_et_text_color_hint"
        app:boxBackgroundColor="#00ffffff"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@drawable/text_input_outline_color"
        app:cursorColor="@color/auth_et_main_color"
        app:hintTextColor="@color/auth_et_main_color"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass_0_layout"
        app:placeholderTextColor="@color/auth_et_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:textColor="@color/auth_et_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/password_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#002A1D1D"
        android:src="@drawable/show_pass"
        app:layout_constraintBottom_toBottomOf="@id/edt_pass_1_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_pass_1_layout"
        app:layout_constraintTop_toTopOf="@id/edt_pass_1_layout" />

    <TextView
        android:id="@+id/pass_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="5dp"
        android:text="@string/password_instructions"
        android:textColor="@color/auth_text_color_2"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/edt_pass_1_layout"
        app:layout_constraintStart_toStartOf="@id/edt_pass_1_layout"
        app:layout_constraintTop_toBottomOf="@id/edt_pass_1_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_pass_2_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColorHint="@color/auth_et_text_color_hint"
        app:boxBackgroundColor="#00ffffff"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@drawable/text_input_outline_color"
        app:cursorColor="@color/auth_et_main_color"
        app:hintTextColor="@color/auth_et_main_color"
        app:layout_constraintTop_toBottomOf="@id/pass_instructions"
        app:placeholderTextColor="@color/auth_et_main_color">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_pass_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/auth_et_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/password2_toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#002A1D1D"
        android:src="@drawable/show_pass"
        app:layout_constraintBottom_toBottomOf="@id/edt_pass_2_layout"
        app:layout_constraintEnd_toEndOf="@id/edt_pass_2_layout"
        app:layout_constraintTop_toTopOf="@id/edt_pass_2_layout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_update_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/change_password"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edt_pass_2_layout"
        tools:layout_editor_absoluteX="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>